Support general medical flow graphs
